03-middlewares.yaml

# JWT
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: jwt-auth
  namespace: apiback
spec:
  plugin:
    jwtAuth:
      source: jwtSource
      forwardHeaders:
        X-Traefik-Group: roles
        X-Traefik-User: username
