05-middlewares-claim.yaml
# JWT
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: jwt-auth-admin
  namespace: apiback
spec:
  plugin:
    jwtAuth:
      source: jwtSource
      forwardHeaders:
        X-Traefik-Group: roles
        X-Traefik-User: username
      claims: Contains(`roles`, `admin`)
