02-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apiback-rl-tls
  namespace: apiback
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`apiback.psw.demo.traefiklabs.tech`) && Path (`/newlines`)
      services:
        - name: apiback-v1
          port: 80
      middlewares:
      #  - name: rate-limit
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apiback-tls
  namespace: apiback
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`apiback.psw.demo.traefiklabs.tech`)
      services:
        - name: apiback-v1
          port: 80
      middlewares:
        - name: jwt-auth
  tls:
    certResolver: default
